# REQ-2025.2-T02-UKCRM

./: .gitignore  404.html  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  insomnia_funnel.yaml
backend/: .env.example  Dockerfile  Dockerfile.prod  create_app_user.py  create_superuser.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/accounts/: admin.py  auth_urls.py  auth_views.py  models.py  serializers.py  urls.py  views.py
backend/accounts/management/commands/: create_admin.py  setup_test_data.py
backend/accounts/migrations/: 0001_initial.py  0002_employee_photo.py  0003_alter_employee_organization.py
backend/funnel/: models.py  serializers.py  tests.py  urls.py  views.py
backend/funnel/migrations/: 0001_initial.py  0002_lead_campaign_lead_career_lead_contact_origin_and_more.py  0002_salesteam_created_at_salesteam_members_and_more.py  0003_lead_account_salesteam_organization.py  0004_merge_20251130_0242.py  0005_alter_lead_email.py  0006_remove_email_unique_constraint.py  0007_drop_email_unique_constraint_sql.py  0008_lead_gain_loss_reason_lead_gain_loss_value_and_more.py  0009_stage_visible_to_closer_stage_visible_to_sdr.py
backend/organization/: admin.py  models.py  permissions.py  serializers.py  views.py
backend/organization/migrations/: 0001_initial.py  0002_remove_organization_owner_email_and_more.py  0003_organization_logo.py
backend/ukcrm/: asgi.py  settings.py  urls.py  wsgi.py
docs-ukcrm/: mkdocs.yml
feedback/: index.html
frontend/: Dockerfile  Dockerfile.frontend.prod  TEST_SUMMARY.md  (+5 more)
(+232 files in other folders)
